<resources>
    <string name="app_name">Smart Home App</string>

    <string name="nav_home">Home</string>
    <string name="nav_device">Devices</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_account">Account</string>
    <string name="nav_change_password">Change Password</string>

    <string name="nav_drawer_open">Open Drawer Navigation</string>
    <string name="nav_drawer_close">Close Drawer Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_logout">Logout</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="_0">0</string>
    <string name="loading">Loading...</string>
    <string name="gas_concentration">GAS \n CONCENTRATION</string>
    <string name="living_room">LIVING ROOM</string>
    <string name="dining_room">DINING ROOM</string>
    <string name="bathroom">BATHROOM</string>
    <string name="bedroom">BEDROOM</string>


    <string name="facebook_app_id">1386732058465504</string>
    <string name="fb_login_protocol_scheme">fb1386732058465504</string>
    <string name="facebook_client_token">e655e6921d8f56408ba1645ddd273ffe</string>

</resources>