<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >

        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/nav_devices"
            android:title="History"
            android:icon="@drawable/ic_devices"/>

        <item android:id="@+id/nav_setting"
            android:title="@string/nav_setting"
            android:icon="@drawable/ic_setting"/>
    </group>
        <item android:title="@string/nav_profile">
            <menu>
                <group android:checkableBehavior="single" >
                    <item android:id="@+id/nav_account"
                        android:title="@string/nav_account"
                        android:icon="@drawable/ic_account"/>

                    <item android:id="@+id/nav_change_password"
                        android:title="@string/nav_change_password"
                        android:icon="@drawable/ic_change_password"/>

                    <item android:id="@+id/nav_logout"
                        android:title="@string/nav_logout"
                        android:icon="@drawable/ic_logout"/>
                </group>
            </menu>
        </item>
</menu>