<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeLivingRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toolbar">
            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/_0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back"
                app:layout_constraintBottom_toBottomOf="@id/back"
                android:text="@string/living_room"
                android:fontFamily="@font/baloo_bhaijaan"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <GridLayout
            android:id="@+id/grid_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#e6c4ae">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="24dp"
                        android:textOff="@string/off"
                        android:textOn="@string/on"
                        android:textStyle="bold"
                        android:thumb="@drawable/sw_thumb"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:showText="true"
                        app:track="@drawable/sw_track" />

                    <ImageView
                        android:id="@+id/led_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="imageLed"
                        android:src="@drawable/ic_led_off"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="32dp"
                        android:text="LED"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:fontFamily="@font/baloo_bhaijaan"
                        android:gravity="center"
                        app:layout_constraintBottom_toTopOf="@+id/switch_led"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#e6c4ae">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_pump"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="24dp"
                        android:textOff="@string/off"
                        android:textOn="@string/on"
                        android:textStyle="bold"
                        android:thumb="@drawable/sw_thumb"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:showText="true"
                        app:track="@drawable/sw_track" />

                    <ImageView
                        android:id="@+id/pump_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="imagePump"
                        android:src="@drawable/ic_motor_off"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="32dp"
                        android:text="PUMP"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:fontFamily="@font/baloo_bhaijaan"
                        android:gravity="center"
                        app:layout_constraintBottom_toTopOf="@+id/switch_pump"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>